# os-labs

./: README.md
lab1-linker/: CMakeLists.txt  Makefile  README.md  errorHandler.h  errors.cpp  errors.h  errors.xlsx  exception.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  temp.cpp  test  test.cpp  tokenizer.cpp  tokenizer.h
lab2-scheduler/: CMakeLists.txt  Event.cpp  Event.h  Makefile  Process.cpp  Process.h  README.md  Scheduler.cpp  Scheduler.h  main.cpp  testinput
lab2-scheduler/Schedulers/: FCFS_Scheduler.cpp  FCFS_Scheduler.h  LCFS_Scheduler.cpp  LCFS_Scheduler.h  Preemptive_Priority_Scheduler.cpp  Preemptive_Priority_Scheduler.h  Priority_Scheduler.cpp  Priority_Scheduler.h  RoundRobin_Scheduler.cpp  RoundRobin_Scheduler.h  SRTF_Scheduler.cpp  SRTF_Scheduler.h
lab3-mmu/: CMakeLists.txt  DataTypes.h  Makefile  MyLogger.cpp  MyLogger.h  MyRandomGenerator.cpp  MyRandomGenerator.h  MyReader.cpp  MyReader.h  Pager.cpp  Pager.h  Process.cpp  Process.h  README.md  main.cpp
lab3-mmu/Pagers/: Aging_Pager.cpp  Aging_Pager.h  Clock_Pager.cpp  Clock_Pager.h  ESC_NRU_Pager.cpp  ESC_NRU_Pager.h  FIFO_Pager.cpp  FIFO_Pager.h  Random_Pager.cpp  Random_Pager.h  WorkingSet_Pager.cpp  WorkingSet_Pager.h
lab3-mmu/lab3_assign/: temp
lab3-mmu/lab3_assign/myout/: LOG
lab4-file/: CMakeLists.txt  CommonTypes.h  IOScheduler.cpp  IOScheduler.h  Makefile  MyLogger.cpp  MyLogger.h  MyReader.cpp  MyReader.h  README.md  main.cpp
lab4-file/IO_Schedulers/: CLOOK_IOScheduler.cpp  CLOOK_IOScheduler.h  FIFO_IOScheduler.cpp  FIFO_IOScheduler.h  FLOOK_IOScheduler.cpp  FLOOK_IOScheduler.h  LOOK_IOScheduler.cpp  LOOK_IOScheduler.h  SSTF_IOScheduler.cpp  SSTF_IOScheduler.h
